--- a/index.html
+++ b/index.html
@@ -15,44 +15,28 @@
             <div id="courses-container">
                 <!-- Courses Additon -->
                 <div class="course-ref">
-                    <p>Rm</p>
                     <p>Course</p>
                     <p>Grade</p>
-                    <p>Cr. Hr</p>
+                    <p>Credit</p>
                 </div>
                 
-                <div class="new-course">
-                    <img src="./close.png" alt="del" class="rm-course">
-                    <input type="text">
-                    <select name="grade" id="grade">
-                        <option value="A">A</option>
-                        <option value="A-">A-</option>
-                        <option value="B+">B+</option>
-                        <option value="B">B</option>
-                        <option value="C+">C+</option>
-                        <option value="C">C</option>
-                        <option value="D+">D+</option>
-                        <option value="D">D</option>
-                        <option value="F">F</option>
-                    </select>
-                    <input type="number" min="0" max="10">
-                </div>
-
-                <div class="new-course">
-                    <img src="./close.png" alt="del" class="rm-course">
-                    <input type="text">
-                    <select name="grade" id="grade">
-                        <option value="A">A</option>
-                        <option value="A-">A-</option>
-                        <option value="B+">B+</option>
-                        <option value="B">B</option>
-                        <option value="C+">C+</option>
-                        <option value="C">C</option>
-                        <option value="D+">D+</option>
-                        <option value="D">D</option>
-                        <option value="F">F</option>
-                    </select>
-                    <input type="number" min="0" max="10">
+                <div id="new-courses-wrap">
+                    <div class="new-course">
+                        <img src="./close.png" alt="del" class="rm-course">
+                        <input type="text" class="input-txt">
+                        <select name="grade" class="grade">
+                            <option value="A">A</option>
+                            <option value="A-">A-</option>
+                            <option value="B+">B+</option>
+                            <option value="B">B</option>
+                            <option value="C+">C+</option>
+                            <option value="C">C</option>
+                            <option value="D+">D+</option>
+                            <option value="D">D</option>
+                            <option value="F">F</option>
+                        </select>
+                        <input type="number" min="0" max="10" class="input-cr credit">
+                    </div>
                 </div>
             </div>
 
@@ -61,7 +45,7 @@
             </div>
         </div>
 
-        <div>
+        <div id="cgpa-container-wrap">
             <div id="cgpa-container">
                 <!-- Calculated GPA -->
                 <p>CGPA</p>
@@ -70,7 +54,7 @@
                 </div>
             </div>
 
-            <button>Calculate</button>
+            <button id="calculate-btn">Calculate</button>
         </div>
     </div>
 </body>
